syntax = "proto3";
package corepb;
import "github.com/dappley/go-dappley/core/pb/transaction.proto";


message Block{
    BlockHeader Header = 1;
    repeated Transaction Transactions = 2;
    uint64 height = 3;
    bytes parentHash = 4;
}

message BlockHeader{
    bytes Hash = 1;
    bytes Prevhash = 2;
    int64 Nonce = 3;
    int64 Timestamp = 4;
}